mule-user-guide/v/3.3/logger-component-reference.adoc
= 记录器组件参考

使用记录器记录错误消息，状态通知或例外等消息。您可以在流中的任何位置添加记录器，并且可以将其配置为记录任何内容：任何字符串，任何Mule表达式或者任何字符串和Mule表达式的组合。

== 配置

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
[%header,cols="10s,10a,37a,37a"]
|===
|Field |Value |Description |Example XML
|Display Name |Logger |Customize to to display a unique name for the logger in your application |
[source, code, linenums]
----
doc:name="Logger"
----
|Message |String or Mule expression |Specify what Mule should log. By default, messages are logged to the console in Mule Studio. |
[source, code, linenums]
----
message="Current payload is #[message.payload]"
----
|Level |Select a level from listed options:

* ERROR
* WARN
* INFO
* DEBUG
* TRACE |Specify the level at which the message should be logged.

By default, Mule Studio will not log messages at the DEBUG or TRACE level to the console unless you create and configure a link:/mule-user-guide/v/3.3/logger-component-reference[`log4j.properties` file] in `src/main/resources` to lower the log level. |
[source, code, linenums]
----
level="INFO"
----
|Category |_Optional_

String |Optionally specify a category name and configure it in the link:/mule-user-guide/v/3.3/logger-component-reference[`log4j.properties file`] to behave per your use case. For example, you can route log messages based on category or set log levels based on category. |
[source, code, linenums]
----
category="MyCustomCategory"
----
|===
....
[tab,title="XML Editor or Standalone"]
....
[source, code, linenums]
----
# A logger set to monitor message processing status
<logger category="monitoring" message="Message #[payload.id] processed successfully" level="INFO" doc:name="Monitoring Logger"/>
 
# A logger set to record the processing time of a flow
<logger category="performance" message="Message #[payload.id] took #[flowVars['processingTime']] milliseconds to process" level="INFO" doc:name="Performance Logger"/>
----

[%header,cols="10s,85"]
|===
|Element |Description
|Logger |Use the Logger to log messages such as error messages, status notifications, or exceptions to the application's log file.
|===

[%header,cols="20s,75a"]
|===
|Element Attribute |Description
|Message |Specify what Mule should log. Supports expressions.
|Level |Select one of the following levels:

* ERROR
* WARN
* INFO
* DEBUG
* TRACE

If no level attribute is set, the logger will log at the DEBUG level.
|Category |_Optional_. Specify what categories to route log entries according to business needs. Configure the categories in your `log4j.properties` file
|`doc:name` |Customize to display a unique name for the logger in your application.

Note: Attribute not required in Mule Standalone configuration.
|===
....
------

[TIP]
====
您可以在您的用例中嵌入尽可能多的表达式，而不是在记录器消息中指定单个Mule表达式。这使您可以为正在记录的内容提供一些上下文，并使您能够一次记录多件事情。

[source, xml, linenums]
----
<logger message="Current payload is #[message.payload] and message id is #[message.id]" level="INFO" doc:name="Logger"/>
----
====

=== 配置log4j.properties文件

默认情况下，记录器设置为以大于或等于INFO的级别记录消息，因此会在DEBUG或TRACE级别丢弃日志消息。

如果您需要调整日志记录级别或定义自定义类别，则可以配置您的`log4j.properties`文件来定义记录器的行为方式。在Mule Standalone中，您的`log4j.properties`文件位于您的`$MULE_HOME/conf`文件夹中。在Mule Studio中，您需要在`src/main/resources`下创建`log4j.properties`文件。下面提供了一个示例文件。

[%header,cols="1*a"]
|===
^ |示例log4j.properties文件
|
[source, code, linenums]
----
# Default log level
log4j.rootCategory=INFO, console
log4j.appender.console=org.apache.log4j.ConsoleAppender
log4j.appender.console.layout=org.apache.log4j.PatternLayout
log4j.appender.console.layout.ConversionPattern=%-5p %d [%t] %c: %m%n
################################################
# You can set custom log levels per-package here
################################################
# CXF is used heavily by Mule for web services
log4j.logger.org.apache.cxf=WARN
# Apache Commons tend to make a lot of noise which can clutter the log.
log4j.logger.org.apache=WARN
# Reduce startup noise
log4j.logger.org.springframework.beans.factory=WARN
# Mule classes
log4j.logger.org.mule=INFO
log4j.logger.com.mulesoft=INFO
# Reduce DM verbosity
log4j.logger.org.jetel=WARN
log4j.logger.Tracking=WARN
----
|===

== 另请参阅

* 在 link:/mule-user-guide/v/3.3/order-processing-example[订单处理示例]中查看正在使用的记录器。
* 详细了解 link:/mule-user-guide/v/3.3/configuring-logging[配置日志记录]。
* 查看 link:/mule-user-guide/v/3.3/mule-expression-language-mel[骡子放养语言]参考，了解如何格式化有用的记录器消息的更多提示。
